--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -100,6 +100,9 @@
             - disqus_id = "activity-#{@activity.id}"
             = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
 
+= render 'layouts/footer'
+
+
 -################################ MODALS  ################################
 
 - if @course
@@ -169,4 +172,4 @@
 #preloaded-activity-json.hide
   = @activity.to_json
 
-= render 'shared/footer'
+
