--- a/app/views/gallery/index.html.haml
+++ b/app/views/gallery/index.html.haml
@@ -9,7 +9,55 @@
         / .flat-form
         /   %form
         /     %input(ng-model='search' placeholder='Enter Name')
-        = render 'shared/gallery'
+        .gallery-filter.navbar(ng-cloak='')
+          .xnavbar-inner
+            %ul.nav
+
+              %form.navbar-search.relative
+                %input.search-query(type="search" placeholder="Search..." ng-model="filters.search_all")
+                %a.clear-search(ng-click="filters.search_all = ''")
+                  %i.icon-remove-circle
+
+              %li.dropdown
+                .dropdown-toggle
+                  FILTER
+                  %i.icon-angle-down
+                %ul.dropdown-menu
+                  %li(ng-repeat="choice in typeChoices")
+                    %a(ng-click="filters.activity_type = choice" ng-class="{active: filters.activity_type == choice}")
+                      {{choice.name}}
+                  %li.divider
+                  %li(ng-repeat="choice in difficultyChoices")
+                    %a(ng-click="filters.difficulty = choice" ng-class="{active: filters.difficulty == choice}")
+                      {{choice.name}}
+
+                  -if can? :update, Activity
+                    %li.divider
+                    %li(ng-repeat="choice in publishedStatusChoices")
+                      %a(ng-click="filters.published_status = choice" ng-class="{active: filters.published_status == choice}")
+                        {{choice.name}}
+
+            %ul.nav.browse-group.pull-right
+              %li.browse-by Browse By
+              %li(ng-repeat="choice in sortChoices" ng-hide="(filters.search_all || '') == ''")
+                %a(ng-click="filters.sort = choice" ng-class="{active: filters.sort == choice}")
+                  {{choice.name}}
+              %li(ng-repeat="choice in sortChoicesWhenNoSearch" ng-show="(filters.search_all || '') == ''")
+                %a(ng-click="filters.sort = choice" ng-class="{active: filters.sort == choice}")
+                  {{choice.name}}
+
+        %div.pull-left(ng-show="activities.length == 0" ng-cloak)
+          %h3 No results found, but perhaps you'd enjoy these recipes?
+
+        %div.pull-left(galleryscroll='load_data()')
+          .media-box-3(ng-cloak='' ng-repeat='activity in getActivities() track by $index' ng-animate="'gallery-animation'")
+            %a(href= 'activities/{{activity.slug}}')
+              .media-box-3-title
+                {{activity.title}}
+              %img(ng-src="{{activityImageURL(activity, 400)}}")
+              .media-box-3-footer
+                .footer-left
+                  {{activity.difficulty}}
 
   .row
     .span2.offset5
