--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -56,12 +56,18 @@
 
   .clear-search
     position: absolute
-    right:  30px
+    right:  25px
     bottom:  4px
-
+    color:  #a9a9a9
 
   .search-query
-    margin-top: -8px
+    margin-top: -9px
+
+.filters-group
+  margin-top: 18px
+  margin-bottom: 18px
+  .btn-group:not(:first-child)
+    margin-left: 30px
 
 .pagination
   @include raleway
