--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -64,10 +64,44 @@
     margin-top: -9px
 
 .filters-group
-  margin-top: 18px
-  margin-bottom: 18px
-  .btn-group:not(:first-child)
-    margin-left: 30px
+  width: 300px
+  position: absolute
+  top:  90%
+  z-index: 1000
+  padding: 10px 20px 20px 40px
+  background-color: rgba(255, 255, 255, .8)
+  border-bottom-left-radius: 5px
+  border-bottom-right-radius: 5px
+  border-top-right-radius: 5px
+  .btn-group
+    margin-top: 10px
+    margin-left: 0px
+  @include bottom-only-annotation-shadow
+  overflow:  hidden
+
+// See https://github.com/angular/angular.js/commit/11f712bc - these class
+// names have to change when we go to angular >= 1.1.5
+.filters-show-setup, .filters-hide-setup
+  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
+  -moz-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
+  -o-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
+  transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
+
+.filters-hide-setup
+  opacity: 1
+  max-height: 150px
+  &.filters-hide-start
+    opacity: 0
+    max-height: 0px
+
+.filters-show-setup
+  opacity: 0
+  max-height: 0px
+  &.filters-show-start
+    opacity: 1
+    max-height: 150px
+
+
 
 .pagination
   @include raleway
