--- a/app/views/gallery/index.html.haml
+++ b/app/views/gallery/index.html.haml
@@ -2,7 +2,7 @@
 - content_for :description, "Become a better by cook by learning from these amazing recipe videos."
 - content_for :keywords, @recipes.map(&:title).to_sentence
 
-.container.gallery-wrapper(ng-controller='GalleryController' ng-cloak='')
+.container.gallery-wrapper.relative(ng-controller='GalleryController' ng-cloak='')
   .row
     .span12
       %div
@@ -14,13 +14,25 @@
 
             %form.navbar-search
               %input.search-query.relative(type="search" placeholder="Search..." ng-model="filters.search_all")
-                %a.clear-search(ng-click="filters.search_all = ''" ng-show="filters.search_all != ''")
+                %a.clear-search(ng-click="filters.search_all = ''" ng-show="filters.search_all || '' != ''")
                   %i.icon-remove-circle
 
-            %li(ng-click="collapse_filters = ! collapse_filters")
-              FILTER
-              %i.icon-angle-down(ng-show="collapse_filters")
-              %i.icon-angle-up(ng-hide="collapse_filters")
+            %li.relative
+              %div(ng-click="collapse_filters = ! collapse_filters")
+                FILTER
+                %i.icon-angle-down(ng-show="collapse_filters")
+                %i.icon-angle-up(ng-hide="collapse_filters")
+              .filters-group(ng-show="!collapse_filters" data-ng-animate="'filters'")
+                .btn-group
+                  %button.btn.btn-checkbox(ng-repeat="choice in typeChoices" ng-model="filters.activity_type" btn-radio="{{choice}}")
+                    {{choice.name}}
+                .btn-group
+                  %button.btn.btn-checkbox(ng-repeat="choice in difficultyChoices" ng-model="filters.difficulty" btn-radio="{{choice}}")
+                    {{choice.name}}
+                -if can? :update, Activity
+                  .btn-group
+                    %button.btn.btn-checkbox(ng-repeat="choice in publishedStatusChoices" ng-model="filters.published_status" btn-radio="{{choice}}")
+                      {{choice.name}}
 
           %ul.nav.browse-group.pull-right
             %li.browse-by Browse By
@@ -30,19 +42,6 @@
             %li(ng-repeat="choice in sortChoicesWhenNoSearch" ng-show="(filters.search_all || '') == ''")
               %a(ng-click="filters.sort = choice" ng-class="{active: filters.sort == choice}")
                 {{choice.name}}
-  .row(collapse="collapse_filters")
-    .span10.offset2
-      .filters-group
-        .btn-group
-          %button.btn.btn-checkbox(ng-repeat="choice in typeChoices" ng-model="filters.activity_type" btn-radio="{{choice}}")
-            {{choice.name}}
-        .btn-group
-          %button.btn.btn-checkbox(ng-repeat="choice in difficultyChoices" ng-model="filters.difficulty" btn-radio="{{choice}}")
-            {{choice.name}}
-        -if can? :update, Activity
-          .btn-group
-            %button.btn.btn-checkbox(ng-repeat="choice in publishedStatusChoices" ng-model="filters.published_status" btn-radio="{{choice}}")
-              {{choice.name}}
 
   .row(ng-show="activities.length == 0")
     .span12
@@ -51,7 +50,7 @@
   .row
     .span12
       %div.pull-left(galleryscroll='load_data()')
-        .media-box-3(ng-cloak='' ng-repeat='activity in getActivities() track by $index' ng-animate="'gallery-animation'")
+        .media-box-3(ng-cloak='' ng-repeat='activity in getActivities()' ng-animate="'gallery-animation'")
           %a(href= 'activities/{{activity.slug}}')
             .media-box-3-title
               {{activity.title}}
