--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -22,3 +22,12 @@
     %h6 Featured Image (For Thumbnails)
     %img(ng-show="hasFeaturedImage()" ng-src="{{featuredImageURL(200)}}")
     .csfilepicker(ng-model="activity.featured_image_id")
+
+    %h6 Include In Galleries
+    .btn-toolbar
+      .btn-group
+        %button.btn(type="button" ng-click="activity.include_in_gallery = true" ng-class="{active: activity.include_in_gallery}")
+          Yes
+        %button.btn(type="button" ng-click="activity.include_in_gallery = false" ng-class="{active: ! activity.include_in_gallery}")
+          No
+
