tweak iphone gallery

--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -147,13 +147,22 @@
   .left-group
     width: 100%
   .browse-group
+    .browse-by
+      display: none
     padding-top: 10px
-    font-size: 85%
+    font-size: 80%
     li > a
       margin-left: 10px
   .filters-group
     right: -10px
   .current-filters
     display: none
+  .gallery-contents
+    margin-top: 4px
+
+
+@media (max-width: 400px)
+  .search-query
+    width: 130px
   
   
