more iphone tweaks

--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -164,5 +164,8 @@
 @media (max-width: 400px)
   .search-query
     width: 130px
-  
-  
+
+  .filters-group
+    right: -90px
+    button
+      font-size: 10px !important
