--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -36,6 +36,8 @@
           = link_to 'Favorites', '#favorites', data: {toggle: 'tab'}
         %li
           = link_to 'Photos', '#photos', data: {toggle: 'tab'}
+        %li
+          = link_to 'Recipes', '#recipes', data: {toggle: 'tab'}
       .tab-content
         .tab-pane.active#courses
           - if @user.courses.any?
@@ -69,6 +71,13 @@
             - upload_title = capture do
               = link_to upload.title, user_upload_path(@user, upload)
             = render 'shared/media_list_item', image: upload.image_id, title: upload_title, text: upload.notes
+        .tab-pane#recipes
+          - @user_activities = @user.created_activities.published
+          - @user_activities.each do |activity|
+            - activity_title = capture do
+              = link_to activity.title, activity_path(activity)
+            = render 'shared/media_list_item', image: activity.featured_image, title: activity_title, text: truncate(activity.description, length: 140, separator: ' ')
+
 
     .span5
       %h4 Timeline
