[circle images] styling fix

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -6,8 +6,9 @@
   background-position: center
   .profile-image
     margin-top: 115px
+    border: 2px solid $orange
+    border-radius: 50%
     img
-      border: 2px solid $orange
       @include boxsizing
   h1
     font-weight: 700
