--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -49,9 +49,10 @@
   .timeline-circle-img
     position: relative
     width: 100%
+    border: 2px solid $orange
+    border-radius: 50%
     img
       width: 100%
-      border: 2px solid $orange
       @include boxsizing
     &:after
       content: ''
@@ -70,9 +71,10 @@
   .timeline-circle-img
     position: relative
     width: 100%
+    border: 2px solid $orange
+    border-radius: 50%
     img
       width: 100%
-      border: 2px solid $orange
       @include boxsizing
     &:after
       content: ''
