--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -51,6 +51,7 @@
     width: 100%
     border: 2px solid $orange
     border-radius: 50%
+    @include boxsizing
     img
       width: 100%
       @include boxsizing
@@ -59,7 +60,7 @@
       position: absolute
       width: 20%
       top: 50%
-      right: -25%
+      right: -26%
       border-top: 1px solid gray
       border-bottom: 1px solid gray
   .timeline-circle-text
@@ -73,6 +74,7 @@
     width: 100%
     border: 2px solid $orange
     border-radius: 50%
+    @include boxsizing
     img
       width: 100%
       @include boxsizing
@@ -81,7 +83,7 @@
       position: absolute
       width: 20%
       top: 50%
-      left: -25%
+      left: -26%
       border-top: 1px solid gray
       border-bottom: 1px solid gray
   .timeline-circle-text
