--- a/app/views/admin/users/_show.html.haml
+++ b/app/views/admin/users/_show.html.haml
@@ -28,3 +28,12 @@
             %li
               = link_to activity_object.title, activity_object
               = activity[1]
+
+      %dt Created Activites
+      %dd
+        %ol
+          - user.created_activities.each do do |activity|
+            - activity_object = Activity.find(activity[0])
+            %li
+              = link_to activity_object.title, activity_object
+              = activity[1]
