--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -97,10 +97,10 @@
           .timeline-start
           .timeline-end
           .timeline-left
-            - @user.events.timeline.in_groups_of(2).map(&:first).compact.each do |event|
+            - @timeline_events.in_groups_of(2).map(&:first).compact.each do |event|
               = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'left'
           .timeline-right
-            - @user.events.timeline.in_groups_of(2).map(&:last).compact.each do |event|
+            - @timeline_events.in_groups_of(2).map(&:last).compact.each do |event|
               = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'right'
         .text-center
           - if current_user == @user
