--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -75,6 +75,9 @@ body
   left:  50%
   margin-left: -75px
 
+.activity-top-buttons
+  margin-top: 20px
+
 /* Bootstrap Overrides */
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input
   height: inherit
@@ -1237,10 +1240,6 @@ a:hover
     background: white
 
 // WYSIWYG EDITING
-
-#edit-mode
-  margin-top: 10px
-  margin-left: 10px
 
 .edit-pair, .edit-pair-show, .edit-pair-edit
   width: 100%
