--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -106,9 +106,8 @@
             - disqus_id = "activity-#{@activity.id}"
             = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @activity.title, disqus_url: activity_url(@activity)
 
-= render 'layouts/footer'
-
-
+= content_for :footer do
+  = render 'layouts/footer'
 -################################ MODALS  ################################
 
 - if @course
