[homepage] update course listing and title

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -6,11 +6,11 @@
 .container
   .row.section
     .span12
-      %h1.text-orange Check out our free courses
+      %h1.text-orange Check out our free courses with more to come
   .row.section
     - if @courses.any?
       - @courses.each do |course|
-        .span4.offset1
+        .span4
           = render 'shared/media_box_2', url: course_path(course), title: course.title, image: course.featured_image, object: course
       .span12.text-center
         %p.lead 
