--- a/app/views/activities/_top_buttons.html.haml
+++ b/app/views/activities/_top_buttons.html.haml
@@ -7,11 +7,13 @@
         .btn.btn-secondary#show-all
           Show All
           %i.icon-picture#show-all-icon
-      -if can?(:update, Activity) && @include_edit_toolbar
-        .pull-right(style="margin-left: 20px;")
+      .pull-right(style="margin-left: 20px;")
 
+        -if can?(:update, @activity) && @include_edit_toolbar
           .btn.btn-secondary(ng-click="maybeStartEditMode()" tooltip="Edit this recipe" tooltip-placement="left")
             Edit
+
+        -if can?(:update, Activity) && @include_edit_toolbar
           .btn.btn-secondary(ng-click="fork()" tooltip="Edit a copy of this recipe" tooltip-placement="left")
             Fork
 
