--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -16,5 +16,5 @@
     = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{filepicker_hero_image(media_object.featured_image)}", onclick: "javascript:window.open(this.href,
     '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn btn-primary btn-social' do
       %i.icon-pinterest
-  %a{href: "mailto:?subject=#{@activity.title.html_safe}%20from%20ChefSteps.com&body=I%20thought%20you%20might%20like%20this:%20#{ url_encode(current_url(request))}",  class: "btn btn-primary btn-social"}  
+  %a{href: "mailto:?subject=#{@activity.title.html_safe}%20from%20ChefSteps.com&body=I%20thought%20you%20might%20like%20this:%20#{ url_encode(current_url(request))}", target: "_blank", id: "email-share",class: "btn btn-primary btn-social"}  
     %i.icon-envelope  
