--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -57,5 +57,7 @@
 
 
       %hr
-        - disqus_id = "upload-#{@upload.id}"
-        = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @upload.title, disqus_url: upload_url(@upload)
+        = render 'comments/comments'
+        = render 'comments/form'
+        / - disqus_id = "upload-#{@upload.id}"
+        / = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: @upload.title, disqus_url: upload_url(@upload)
