--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,4 @@
-= form_for [@commentable, @comment] do |f|
-  = f.text_area :content
-  = f.submit
+.flat-form
+  = form_for [@commentable, @comment] do |f|
+    = f.text_area :content, class: 'input-block-level', rows: 3
+    = f.submit 'Submit', class: 'btn btn-primary'
