--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
 .flat-form
   = form_for [@commentable, @comment] do |f|
-    = f.text_area :content, class: 'input-block-level', rows: 3
-    = f.submit 'Submit', class: 'btn btn-primary'
+    = f.text_area :content, class: 'input-block-level', rows: 3, placeholder: 'Write a comment...'
+    = f.submit 'Submit', class: 'btn btn-primary pull-right'
