--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -3,7 +3,7 @@
   - @comments.each do |comment|
     .comment
       %span.comment-user.lead
-        = link_to comment.user do
+        = link_to user_profile_path(comment.user) do
           = image_tag filepicker_circle_image(comment.user.image_id), width: "30"
           = comment.user.name
       %span.comment-content.lead
