--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -71,20 +71,41 @@
   cursor: pointer
 
 .filters-group
-  width: 300px
+  width: auto
   position: absolute
   top:  90%
   z-index: 1000
   padding: 10px 30px 20px 30px
-  background-color: rgba(255, 255, 255, .8)
+  background-color: rgba(255, 255, 255, .9)
   border-bottom-left-radius: 5px
   border-bottom-right-radius: 5px
   border-top-right-radius: 5px
   .btn-group
-    margin-top: 10px
+    margin-top: 15px
     margin-left: 0px
   @include bottom-only-annotation-shadow
   overflow:  hidden
+
+  .btn-group.first-separate
+    .btn:first-child
+      margin-right: 12px
+      width:  auto
+
+  .btn
+    background-image: none
+    background-color: #f1f1f1
+    border-color:  #ccc
+    color: #666
+    border-radius:  2px !important
+    -webkit-border-radius:  1px
+    width:  120px
+    text-align:  center
+
+  .btn.active
+    background-color: #ddd !important
+    color: inherit
+    text-shadow: none
+
 
 .current-filters
   font-size: 90%
@@ -154,7 +175,7 @@
     li > a
       margin-left: 10px
   .filters-group
-    right: -10px
+    right: -140px
   .current-filters
     display: none
   .gallery-contents
@@ -169,3 +190,7 @@
     right: -90px
     button
       font-size: 10px !important
+
+    .btn
+      width:  80px
+      text-align:  center
