--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,12 +1,18 @@
-%h3= "Comments (#{@comments.count})"
-.comments
-  - @comments.each do |comment|
-    .comment
-      %span.comment-user.lead
-        = link_to user_profile_path(comment.user) do
-          = image_tag filepicker_circle_image(comment.user.image_id), width: "30"
-          = comment.user.name
-      %span.comment-content.lead
-        = comment.content
-      .comment-created-at
-        %small= "#{time_ago_in_words(comment.created_at)} ago."
+%div(ng-controller='CommentsController')
+  %h3= "#{commentable.comments.count} Comments"
+  .comments
+    - commentable.comments.each do |comment|
+      .comment
+        %span.comment-user.lead
+          = link_to user_profile_path(comment.user) do
+            = image_tag filepicker_circle_image(comment.user.image_id), width: "30"
+            = comment.user.name
+        %span.comment-content.lead
+          = comment.content
+        .comment-created-at
+          %small= "#{time_ago_in_words(comment.created_at)} ago."
+
+  .flat-form
+    = form_for [commentable, commentable.comments.new] do |f|
+      = f.text_area :content, class: 'input-block-level', rows: 3, placeholder: 'Write a comment...'
+      = f.submit 'Add Comment', class: 'btn btn-primary pull-right'
