--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -2,7 +2,7 @@
 - user_noun = current_user == event.user ? 'You' : event.user.name
 .timeline-circle{data: {direction: direction}}
   .timeline-circle-img
-    = link_to user_upload_path(event.trackable.user, event.trackable) do
+    = link_to upload_path(event.trackable) do
       = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
   .timeline-circle-text.text-center
     %div= "#{user_noun} uploaded a photo"
