--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,16 +1,24 @@
 %div(ng-controller='CommentsController')
   %h3= "#{commentable.comments.count} Comments"
-  .comments
-    - commentable.comments.each do |comment|
-      .comment
-        %span.comment-user.lead
-          = link_to user_profile_path(comment.user) do
-            = image_tag filepicker_circle_image(comment.user.image_id), width: "30"
-            = comment.user.name
-        %span.comment-content.lead
-          = comment.content
-        .comment-created-at
-          %small= "#{time_ago_in_words(comment.created_at)} ago."
+  / .comments
+  /   - commentable.comments.each do |comment|
+  /     .comment
+  /       %span.comment-user.lead
+  /         = link_to user_profile_path(comment.user) do
+  /           = image_tag filepicker_circle_image(comment.user.image_id), width: "30"
+  /           = comment.user.name
+  /       %span.comment-content.lead
+  /         = comment.content
+  /       .comment-created-at
+  /         %small= "#{time_ago_in_words(comment.created_at)} ago."
+  .comments(ng-repeat='comment in comments')
+    .comment
+      %span.comment-user.lead
+        %a(href="/profiles/{{comment.user.slug}}")
+          %img(ng-src="{{userImageUrl(comment.user.image_id)}}")
+          {{comment.user.name}}
+      %span.comment-content.lead
+        {{comment.content}}
 
   .flat-form
     = form_for [commentable, commentable.comments.new] do |f|
