--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -19,8 +19,16 @@
           {{comment.user.name}}
       %span.comment-content.lead
         {{comment.content}}
+      .comment-created-at
+        %small
+          {{comment.created_at}}
 
   .flat-form
-    = form_for [commentable, commentable.comments.new] do |f|
-      = f.text_area :content, class: 'input-block-level', rows: 3, placeholder: 'Write a comment...'
-      = f.submit 'Add Comment', class: 'btn btn-primary pull-right'
+    %form(ng-submit="addComment()")
+      %textarea.input-block-level(ng-model="newComment.content" placeholder='Write a comment...')
+      %input.btn.btn-primary.pull-right(type='submit' value='Add Comment')
+
+  / .flat-form
+  /   = form_for [commentable, commentable.comments.new] do |f|
+  /     = f.text_area :content, class: 'input-block-level', rows: 3, placeholder: 'Write a comment...'
+  /     = f.submit 'Add Comment', class: 'btn btn-primary pull-right'
