--- a/app/views/courses/poutine.html.haml
+++ b/app/views/courses/poutine.html.haml
@@ -13,4 +13,6 @@
     mixpanel.track('Course Viewed', {'distinct_id' : "#{current_user.id}", 'course' : "#{course.title}", 'url' : window.location.pathname});
 - else
   :javascript
-    mixpanel.track('Course Viewed', {'course title' : "#{course.title}", 'url' : window.location.pathname});
+    mixpanel.track('Course Viewed', {'course' : "#{course.title}", 'url' : window.location.pathname});
+
+#course-title(data-course="#{course.title}")
