[uploads] ng clock likes

--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -46,7 +46,7 @@
                 = image_tag filepicker_circle_image(like.user.image_id), class: "img-circle", width: "30"
                 = "You liked this #{time_ago_in_words(like.created_at)} ago."
               - else
-                = link_to user_profile_url(like.user.id) do
+                = link_to user_profile_url(like.user) do
                   = image_tag filepicker_circle_image(like.user.image_id), class: "img-circle", width: "30"
                   = like.user.name
                 liked this
