--- a/app/views/shared/_like_button.html.haml
+++ b/app/views/shared/_like_button.html.haml
@@ -8,7 +8,7 @@
 /     = likeable_object.likes_count
 - current_user_likes = current_user && current_user.likes.map(&:likeable).include?(likeable_object) ? 'true' : 'false'
 - likes_count = likeable_object.likes_count ? likeable_object.likes_count : 0
-%span(ng-controller='LikesController')
+%span(ng-controller='LikesController' ng-cloak)
   %span(ng-model="current_user_likes" ng-init="current_user_likes=#{current_user_likes}")
   %span(ng-model="likes_count" ng-init="likes_count=#{likes_count}")
   %span(ng-switch on="current_user_likes")
