--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -2,7 +2,8 @@
   / %span(ng-model="commentable_type" ng-init="commentable_type='#{commentable.class}'")
   / %span(ng-model="commentable_id" ng-init="commentable_id='#{commentable.id}'")
   %h4
-    {{comments_count}} Comments
+    %span(ng-pluralize count='comments_count' when="{'0':'0 Comments', '1':'1 Comment', 'other':'{{comments_count}} Comments'}")
+      / {{comments_count}} Comments
     %span(ng-show='commentsToggle()')
       %span(ng-switch on='commentLimit')
         %span(ng-switch-when="-6")
