[dropdown] on hover

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -110,6 +110,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     z-index: -1
     opacity: .6
 
+ul.nav li.dropdown:hover > ul.dropdown-menu
+  display: block
+
 .well
   //border: 1px solid #ccc
   border: 0px
