--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,7 +1,7 @@
 %div(ng-controller='CommentsController' ng-init="init('#{commentable.class.to_s.downcase.pluralize}','#{commentable.id}')" ng-cloak)
   / %span(ng-model="commentable_type" ng-init="commentable_type='#{commentable.class}'")
   / %span(ng-model="commentable_id" ng-init="commentable_id='#{commentable.id}'")
-  %h4
+  %h4.comments-header
     %span(ng-pluralize count='comments_count' when="{'0':'0 Comments', '1':'1 Comment', 'other':'{{comments_count}} Comments'}")
       / {{comments_count}} Comments
     %span(ng-show='commentsToggle()')
