[notifications] unread labels

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -861,6 +861,11 @@ a:hover
       text-decoration: none
 
 /* Labels */
+.label
+  background: $orange
+  color: white
+  @include raleway
+  font-weight: bold
 
 .label-large
   font-size: 20px
