--- a/app/assets/stylesheets/timeline.css.sass
+++ b/app/assets/stylesheets/timeline.css.sass
@@ -46,6 +46,7 @@
 // TIMELINE CIRCLE //
 .timeline-circle[data-direction='left']
   padding-right: 20%
+  position: relative
   .timeline-circle-img
     position: relative
     width: 100%
@@ -67,8 +68,13 @@
     width: 100%
     margin-top: 5%
     margin-bottom: 10%
+  .timeline-label
+    position: absolute
+    top: 70px
+    right: 5px
 .timeline-circle[data-direction='right']
   padding-left: 20%
+  position: relative
   .timeline-circle-img
     position: relative
     width: 100%
@@ -90,6 +96,10 @@
     width: 100%
     margin-top: 5%
     margin-bottom: 10%
+  .timeline-label
+    position: absolute
+    top: 70px
+    left: 5px
 
 // TIMELINE TEXT ONLY //
 .timeline-text-only[data-direction='left']
