[notifications] timeline label

--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -6,7 +6,7 @@
       = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
   .timeline-circle-text.text-center
     %div= "#{user_noun} uploaded a photo"
-    %div= time_ago_in_words(event.created_at) + ' ago'
-  .timeline-label
-    - if event.user == current_user && event.unread?(event.user)
-      .label new
+    %div
+      = time_ago_in_words(event.created_at) + ' ago'
+      - if event.user == current_user && event.unread?(event.user)
+        .label new
