[notifications] removed unread and added viewed

--- a/app/views/events/comment/_create.html.haml
+++ b/app/views/events/comment/_create.html.haml
@@ -15,5 +15,5 @@
         = "#{user_noun} commented on #{link_to commentable_object.user.name, user_profile_path(commentable_object.user)}'s #{link_to 'photo', commentable_object}.".html_safe
       %div
         = time_ago_in_words(event.created_at) + ' ago'
-        - if event.user == current_user && event.unread?(event.user)
+        - if event.user == current_user && !event.viewed
           .label new
