--- a/app/views/events/comment/_received_create.html.haml
+++ b/app/views/events/comment/_received_create.html.haml
@@ -15,5 +15,5 @@
         = "#{link_to event.trackable.user.name, user_profile_path(event.trackable.user)} comment on #{user_noun} #{link_to 'photo', commentable_object}.".html_safe
       %div
         = time_ago_in_words(event.created_at) + ' ago'
-        - if event.user == current_user && event.unread?(event.user)
+        - if event.user == current_user && !event.viewed
           .label new
