--- a/app/views/events/like/_create.html.haml
+++ b/app/views/events/like/_create.html.haml
@@ -15,7 +15,7 @@
         = "#{user_noun} liked #{link_to likeable_object.user.name, user_profile_path(likeable_object.user)}'s #{link_to 'photo', likeable_object}.".html_safe
       %div
         = time_ago_in_words(event.created_at) + ' ago'
-        - if event.user == current_user && event.unread?(event.user)
+        - if event.user == current_user && !event.viewed
           .label new
 
 - when 'Activity'
@@ -28,5 +28,5 @@
         = "#{user_noun} liked #{link_to likeable_object.title, likeable_object}.".html_safe
       %div
         = time_ago_in_words(event.created_at) + ' ago'
-        - if event.user == current_user && event.unread?(event.user)
+        - if event.user == current_user && !event.viewed
           .label new
