--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -8,5 +8,5 @@
     %div= "#{user_noun} uploaded a photo"
     %div
       = time_ago_in_words(event.created_at) + ' ago'
-      - if event.user == current_user && event.unread?(event.user)
+      - if event.user == current_user && !event.viewed
         .label new
