--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -93,22 +93,23 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   margin: 0px
   li
     a
-      color: white
+      color: #333
       padding: 3px 10px
       &:hover
         background: $orange
+        color: white
   &:after
     content: normal
   &:before
     content: normal
   .dropdown-background
-    background: black
+    background: $offwhite
     position: absolute
     width: 100%
     height: 100%
     top: 0px
     z-index: -1
-    opacity: .6
+    opacity: .9
 
 ul.nav li.dropdown:hover > ul.dropdown-menu
   display: block
@@ -886,19 +887,21 @@ a:hover
   i
     line-height: 20px
 
+.btn-group > .btn:first-child
+  border-radius: 0px    
+
 .btn-primary
   background: $orange
   border: 0px
-  -webkit-box-shadow: 0 3px 0px -1px $dark-orange
-  -moz-box-shadow: 0 3px 0px -1px $dark-orange
-  box-shadow: 0 3px 0px -1px $dark-orange  
+  border-bottom: 1px $dark-orange solid
   border-radius: 0px
   position: relative
   @include boxsizing
-  @include transition(all 100ms)
+  @include transition(all .25s)
   &:hover
     background: $darker_orange
-    @include transition(all 100ms)
+    @include transition(all .25s)
+    border-bottom: 1px $orange solid
   &:disabled
     background: #696969
     color:  #d3d3d3
@@ -909,9 +912,7 @@ a:hover
 .btn-secondary
   background: $offwhite
   border: 0px
-  -webkit-box-shadow: 0 3px 0px -1px #999
-  -moz-box-shadow: 0 3px 0px -1px #999
-  box-shadow: 0 3px 0px -1px #999999
+  border-bottom: 1px #ccc solid
   border-radius: 0px
   @include transition(all 100ms)
   &:hover
@@ -989,13 +990,14 @@ a:hover
 .btn-circle
   height: 40px
   width: 40px
-  padding: 10px
+  padding: 10px 15px
   margin: 5px 2px
   border-radius: 50%
+  border: none
   background-image: none
-  background: $white-opaque
-  color: $orange
-  font-size: 20px
+  background: $orange
+  color: white
+  font-size: 17px
   text-shadow: none
   text-align: center
   transition: background 200ms
@@ -1060,11 +1062,11 @@ a:hover
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#00ffffff',GradientType=0 )
   .nav > li > a
     text-shadow: none
-    color: black
+    color: #333
     line-height: 34px
     font-size: 16px
     font-weight: 200
-    @include transition(background 300ms)
+    @include transition(background .25s)
     &:hover
       background: $orange
       color: white
